@@ -89,6 +89,7 @@ int main(int argc, char **argv)
 	    {"max-recursion", 1, 0, 0},
 	    {"disable-archive", 0, 0, 0},
 	    {"no-archive", 0, 0, 0},
+	    {"detect-broken", 0, 0, 0},
 	    {"block-encrypted", 0, 0, 0},
 	    {"no-pe", 0, 0, 0},
 	    {"no-ole2", 0, 0, 0},
