@@ -1,5 +1,5 @@
 .\" Manual page created by Tomasz Kojm, 14/15 IV 2002
-.TH "clamscan" "1" "March 14, 2004" "Tomasz Kojm" "Clam AntiVirus"
+.TH "clamscan" "1" "August 4, 2004" "Tomasz Kojm" "Clam AntiVirus"
 .SH "NAME"
 .LP 
 clamscan \- scan files and directories against viruses
@@ -81,6 +81,9 @@ Disable support for HTML detection and normalisation.
 .TP 
 \fB\-\-no\-archive\fR
 Disable archive support built in libclamav.
+.TP 
+\fB\-\-detect\-broken\fR
+Mark broken executables as viruses (Broken.Executable).
 .TP 
 \fB\-\-block\-encrypted\fR
 Mark encrypted archives as viruses (Encrypted.Zip, Encrypted.RAR).
