@@ -144,6 +144,11 @@ MaxDirectoryRecursion 15
 # required for decompression of popular executable packers such as UPX.
 ScanPE
 
+# With this option clamav will try to detect broken executables and mark
+# them as Broken.Executable
+#DetectBrokenExecutables
+
+
 ##
 ## Documents
 ##
